syntax = "proto3";
option go_package = "ticket-booking-app/domain";

package booking;

message User {
  string id = 1;
  string firstname = 2;
  string lastname = 3;
  string email = 4;
}

message Booking {
  string id = 1;
  string from = 2;
  string to = 3;
  int32 price = 4;
  int32 seat = 5;
  string section = 6;
  User user = 7;
}

message BookingRequest{
  string from = 1;
  string to = 2;
  int32 price = 3;
  User user = 4;
}

message BookingDbResponse {
  string id = 1;
  string from = 2;
  string to = 3;
  int32 price = 4;
  int32 seat = 5;
  string section = 6;
  string userid = 7;
}

message BookingResponse {
  string id = 1;
  string from = 2;
  string to = 3;
  int32 price = 4;
  int32 seat = 5;
  string section = 6;
  User user = 7;
}

message GetBookingsBySectionRequest {
  string section = 1;
}

message GetBookingByUserRequest {
  User user = 1;
}

message BookingListResponse {
  repeated BookingResponse bookings = 1;
}

message SeatModificationRequest {
  string section = 1;
  int32 seat = 2;
  User user = 3;
}

message SeatModificationResponse {
  string section = 1;
  int32 seat = 2;
  User user = 3;
}

message RemoveBookingByUserRequest {
  User user = 1;
}

message RemoveBookingResponse {}

// Train ticket booking APIs
service BookingService {

  rpc CreateBooking(BookingRequest) returns (BookingResponse){}

  rpc GetBookingsBySection(GetBookingsBySectionRequest) returns (BookingListResponse){}

  rpc GetBookingByUser(GetBookingByUserRequest) returns (BookingResponse){}

  rpc ModifySeatByUser(SeatModificationRequest) returns (SeatModificationResponse){}

  rpc RemoveBookingByUser(RemoveBookingByUserRequest) returns (RemoveBookingResponse){}

}